fix: hide x overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -114,6 +114,7 @@ body {
 
 html {
   padding: 0;
+  overflow-x: hidden;
 }
 
 .message {
@@ -584,6 +585,7 @@ body {
 
 html {
   padding: 0;
+  overflow-x: hidden;
 }
 
 .message {
@@ -1076,6 +1078,7 @@ body {
 
 html {
   padding: 0;
+  overflow-x: hidden;
 }
 
 .message {
