--- a/static/scss/_base.scss
+++ b/static/scss/_base.scss
@@ -160,6 +160,7 @@ body {
 
 html {
     padding:0;
+    overflow-x: hidden;
 }
 
 .message {
